Enter on input fields works now

--- a/vidj.html
+++ b/vidj.html
@@ -58,17 +58,17 @@
                 <div class="form-group">
                     <label for="name" class="control-label col-lg-2">Name:</label>
                     <div class="col-lg-10">
-                        <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
+                      <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
                     <div class="col-lg-10">
-                        <input type="checkbox" id="isPrivate" name="isPrivate" />
+                      <input type="checkbox" id="isPrivate" name="isPrivate" />
                     </div>
                 </div>
                 <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <a href="" class="btn btn-primary save">Save</a>
+                    <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
                     <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
                 </div>
             </fieldset>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <a href="" class="btn btn-primary goToRoom">Go!</a>
+                    <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
                     <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
                 </div>
             </fieldset>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <a href="" class="btn btn-primary addVideo">Add!</a>
+                    <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
                     <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
                 </div>
             </fieldset>
