--- a/vidj.html
+++ b/vidj.html
@@ -29,152 +29,197 @@
     </div>
   </div>
   <div class="container">
-    <div class="page">
-        {{renderPage}}
-    </div>
+    {{renderPage}}
   </div> 
 </body>
 
 <template name="Home">
-  <div class="wide col-lg-12">
-    <div class="alpha60 tall">
-      <h1 class="large text-center"><span class="blue">Welcome</span> to <span class="purp">Vi</span><span class="font-weight:bold"><span class="purp">D</span>J</span>.tv</h1>
-      <br/>
-      <div class="buttonsHome text-center">
-        <a class="btn btn-lg btn-home" href="/rooms">Browse Room</a>
-        <a class="btn btn-lg btn-home" href="/rooms/find">Enter a Private Room</a>
-        <a class="btn btn-lg btn-home" href="/rooms/new/add">Create a Room</a>
+  <div class="page">
+    <div class="wide col-lg-12">
+      <div class="alpha60 tall">
+        <h1 class="large text-center"><span class="blue">Welcome</span> to <span class="purp">Vi</span><span class="font-weight:bold"><span class="purp">D</span>J</span>.tv</h1>
+        <br/>
+        <div class="buttonsHome text-center">
+          <a class="btn btn-lg btn-home" href="/rooms">Browse Room</a>
+          <a class="btn btn-lg btn-home" href="/rooms/find">Enter a Private Room</a>
+          <a class="btn btn-lg btn-home" href="/rooms/new/add">Create a Room</a>
+        </div>
       </div>
     </div>
   </div>
 </template>
 
 <template name="CreateARoom">
-  <div class="row-fluid">
-    <div class="alpha60 create">
-        <form class="form-horizontal">
-            <fieldset>
-                <legend>Create a Room</legend>
-                <div class="form-group">
-                    <label for="name" class="control-label col-lg-2">Name:</label>
-                    <div class="col-lg-10">
-                      <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
-                    <div class="col-lg-10">
-                      <input type="checkbox" id="isPrivate" name="isPrivate" />
-                    </div>
-                </div>
-                <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
-                    <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                </div>
-            </fieldset>
-        </form>
-    </div>
-  </div>
-  <div class="row-fluid status-bar">
-      <div>
-          <div class="alert alert-success" style="display: none">
-              <b>Success!</b> Wine saved successfully
-          </div>
+  <div class="page">
+    <div class="row-fluid">
+      <div class="alpha60 create">
+          <form class="form-horizontal">
+              <fieldset>
+                  <legend>Create a Room</legend>
+                  <div class="form-group">
+                      <label for="name" class="control-label col-lg-2">Name:</label>
+                      <div class="col-lg-10">
+                        <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
+                      <div class="col-lg-10">
+                        <input type="checkbox" id="isPrivate" name="isPrivate" />
+                      </div>
+                  </div>
+                  <div class="form-actions col-lg-offset-2 col-lg-10">
+                      <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
+                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+                  </div>
+              </fieldset>
+          </form>
       </div>
+    </div>
+    <div class="row-fluid status-bar">
+        <div>
+            <div class="alert alert-success" style="display: none">
+                <b>Success!</b> Wine saved successfully
+            </div>
+        </div>
+    </div>
   </div>
 </template>
 
 <template name="BrowseRooms">
+  <div class="page">
   {{#if loading}}
     <div id="rooms">Loading...</div>
   {{else}}
     <div class="page alpha60">
       <ul class="thumbnailsLeft">
         {{#each rooms}}
-          <a href="/rooms/{{_id}}" class="thumbnail btn-room btn-lg" style="text-align: center;">
+          <a href="/rooms/{{_id}}/mode" class="thumbnail btn-room btn-lg" style="text-align: center;">
             <h5>{{name}}</h5>
           </a>
         {{/each}}
       </ul>
     </div>
   {{/if}}
+  </div>
 </template>
 
 <template name="FindRoom">
-  <div class="row-fluid">
-    <div class="alpha60 create">
-        <form class="form-horizontal">
-            <fieldset>
-                <legend>Find a Private Room</legend>
-                <div id="error">No Room with that ID</div>
-                <div class="form-group">
-                    <label for="privateId" class="control-label col-lg-2">Room Id:</label>
-                    <div class="col-lg-10">
-                        <input type="text" id="privateId" class="form-control" name="privateId" placeholder="eg(Kickback Supreme)"/>
-                    </div>
-                </div>
-                <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
-                    <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                </div>
-            </fieldset>
-        </form>
+  <div class="page">
+    <div class="row-fluid">
+      <div class="alpha60 create">
+          <form class="form-horizontal">
+              <fieldset>
+                  <legend>Find a Private Room</legend>
+                  <div id="error">No Room with that ID</div>
+                  <div class="form-group">
+                      <label for="privateId" class="control-label col-lg-2">Room Id:</label>
+                      <div class="col-lg-10">
+                          <input type="text" id="privateId" class="form-control" name="privateId" placeholder="eg(Kickback Supreme)"/>
+                      </div>
+                  </div>
+                  <div class="form-actions col-lg-offset-2 col-lg-10">
+                      <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
+                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+                  </div>
+              </fieldset>
+          </form>
+      </div>
     </div>
   </div>
 </template>
 
 <template name="AddVideoScreen">
-  <div class="row-fluid">
-    <div class="alpha60 create">
-        <form class="form-horizontal">
-            <fieldset>
-                <legend>Add a Video</legend>
-                <div class="form-group">
-                    <label for="url" class="control-label col-lg-2">URL:</label>
-                    <div class="col-lg-10">
-                        <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
-                    </div>
-                </div>
-                <div class="form-actions col-lg-offset-2 col-lg-10">
-                    <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
-                    <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                </div>
-            </fieldset>
-        </form>
+  <div class="page">
+    <div class="row-fluid">
+      <div class="alpha60 create">
+          <form class="form-horizontal">
+              <fieldset>
+                  <legend>Add a Video</legend>
+                  <div class="form-group">
+                      <label for="url" class="control-label col-lg-2">URL:</label>
+                      <div class="col-lg-10">
+                          <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
+                      </div>
+                  </div>
+                  <div class="form-actions col-lg-offset-2 col-lg-10">
+                      <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
+                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+                  </div>
+              </fieldset>
+          </form>
+          <div class="success">
+          </div>
+      </div>
     </div>
   </div>
 </template>
 
 <template name="EnteredRoom">
-  {{#if loading}}
-    <div id="entered" style="font-size:30px;color:white">Loading...</div>
-  {{else}}
-    <div class="alpha60 currRoom">
-      <div class="row">
-        <legend class="col-9 col-lg-9 down">{{room.name}} with ID: {{room._id}}</legend>
-        <div class="col-lg-3 col-3"><a id="addVideo" href="/rooms/{{room._id}}/addVideo"><h5 class="plus">+</h5></a></div>
+  <div class="videoPage">
+    {{#if loading}}
+      <div id="entered" style="font-size:30px;color:white">Loading...</div>
+    {{else}}
+      <div class="alpha60 currRoom">
+          {{#constant}}
+            {{#if video_objs}}
+              <div class="video-container col-lg-10" id="video-container">
+                <div id='youtube-video'></div>
+              </div>
+            {{else}}
+            <div style="font-size:30px;color:white;">No Videos :( Try adding one!</div>
+            {{/if}}
+          {{/constant}}
+          {{#isolate}}
+              <div class="playlist-container col-lg-2">
+                <div class="row">
+                  <legend class="col-8 col-lg-9 down">{{room.name}}</legend>
+                  <div class="col-lg-2 col-3"><a id="toAddVideo"><h5 class="plus">+</h5></a></div>
+                  <h5 class="roomid">Room ID: {{room._id}}</h5>
+                </div>
+                <div class="playlist">
+                </div>
+                <div class="addVideoPanel">
+                  <form class="form-horizontal">
+                    <fieldset>
+                      <h5>Add a Video</h5>
+                      <div class="form-group">
+                        <label for="url" class="control-label col-lg-2">URL:</label>
+                        <div class="col-lg-10">
+                          <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
+                        </div>
+                      </div>
+                      <div class="form-actions col-lg-offset-2 col-lg-10">
+                        <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
+                        <a class="btn delete">Cancel</a>
+                      </div>
+                    </fieldset>
+                  </form>
+                </div>
+                {{#each videoData}}
+                {{/each}}
+              </div>
+          {{/isolate}}
+      <div>
+    {{/if}}
+  </div>
+</template>
+
+<template name="ChooseModeScreen">
+  <div class="page">
+    <div class="row-fluid">
+      <div class="alpha60 create">
+        <legend>Choose Mode</legend>
+        <a href="/rooms/{{room._id}}" class="theater mode thumbnail btn-room btn-lg" style="text-align: center;margin:25px 30%;">Theater</a>
+        <a href="/rooms/{{room._id}}/addVideo" class="submitter mode thumbnail btn-room btn-lg" style="text-align: center;margin:25px 30%;">Submitter View</a>
       </div>
-        {{#constant}}
-        {{#if video_objs}}
-          <div class="video-container" id="video-container">
-            <div id='youtube-video'></div>
-          </div>
-        {{else}}
-        <div style="font-size:30px;color:white;">No Videos :( Try adding one!</div>
-        {{/if}}
-        {{/constant}}
-        {{#isolate}}
-          <div class="playlist">
-            {{#each videoData}}
-               {{this}}
-            {{/each}}
-          </div>
-        {{/isolate}}
-    <div>
-  {{/if}}
+    </div>
+  </div>
 </template>
 
 <template name="about">
+  <div class="page">
+  </div>
 </template>
 
 <template name="loadingPage">
