--- a/vidj.html
+++ b/vidj.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Vidj</title>
+  <title>Kikbak.tv</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
 </head>
@@ -12,145 +12,160 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
-        <a class="navbar-brand" href="/">ViDJ.tv</a>
-
+        <a id"brand" class="navbar-brand" href="/" style="color:white;">Kikbak.tv</a>
         <div class="nav-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/rooms"><span class="purp">Browse</span> Rooms</a></li>
                 <li><a href="/rooms/find"><i class="icon-edit icon-white"></i><span class="blue">Find</span> a Private Room</a></li>
                 <li><a href="/rooms/new/add"><i class="icon-edit icon-white"></i><span class="green">Create</span> a Room</a></li>
             </ul>
-
             <ul class="nav navbar-nav pull-right">
                 <li class="about-menu"><a href="/about">About</a></li>
             </ul>
         </div>
     </div>
   </div>
-  <div class="container">
+
+  <div class="container wrapper primary">
     {{renderPage}}
   </div> 
 </body>
 
 <template name="Home">
-  <div class="page">
-    <div class="wide col-lg-12">
-      <div class="alpha60 tall">
-        <h1 class="large text-center"><span class="blue">Welcome</span> to <span class="purp">Vi</span><span class="font-weight:bold"><span class="purp">D</span>J</span>.tv</h1>
-        <br/>
-        <div class="buttonsHome text-center">
-          <a class="btn btn-lg btn-home" href="/rooms">Browse Room</a>
-          <a class="btn btn-lg btn-home" href="/rooms/find">Enter a Private Room</a>
-          <a class="btn btn-lg btn-home" href="/rooms/new/add">Create a Room</a>
-        </div>
+  <div class="homepage col-lg-12 text-center">
+    <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
+    <br/>
+    <h3 class="tag">A place to make real-time playlists, with friends.</h3>
+    <div class="buttonsHome">
+      <a class="btn btn-lg btn-home purp-bg" href="/rooms">Browse</a>
+      <a class="btn btn-lg btn-home blue-bg" href="/rooms/find">Enter Private Room</a>
+      <a class="btn btn-lg btn-home green-bg" href="/rooms/new/add">Create</a>
+    </div>
+  </div>
+  <div class="about col-lg-12">
+    <div class="aboutContent">
+    <h2>KikBak.tv </h2>
+    <div class="row">
+      <div class="col-xs-6 col-md-3"><p>1. Make or enter a Kikbak </br>
+              Public - anyone anywhere can enter and edit the playlist </br>
+              Private - only people you give the room id to are allowed to contribute</p> </div>
+      <div class="col-xs-6 col-md-3"><p>2. Choose a mode </br>
+              Theater - view the playlist (main screen) </br>
+              submitter - quickly add media to the selected room</p> </div>
+      <div class="col-xs-6 col-md-3"><p>3. Submit videos to the playlist </p> </div>
+      <div class="col-xs-6 col-md-3"><p>4. Enjoy!</p> </div>
       </div>
     </div>
+  </div>
+  <div class="wrapper secondary footer col-lg-12 text-center">
+    <span>Copyright © 2013 Kikbak.tv</span><span>     |     </span><span><a href="/about" class="plain">About</a></span><span>  |  </span><span><a href="/contact" class="plain">Contact</a></span>
   </div>
 </template>
 
 <template name="CreateARoom">
-  <div class="page">
-    <div class="row-fluid">
-      <div class="alpha60 create">
-          <form class="form-horizontal">
-              <fieldset>
-                  <legend>Create a Room</legend>
-                  <div class="form-group">
-                      <label for="name" class="control-label col-lg-2">Name:</label>
-                      <div class="col-lg-10">
-                        <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
-                      </div>
-                  </div>
-                  <div class="form-group">
-                      <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
-                      <div class="col-lg-10">
-                        <input type="checkbox" id="isPrivate" name="isPrivate" />
-                      </div>
-                  </div>
-                  <div class="form-actions col-lg-offset-2 col-lg-10">
-                      <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
-                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                  </div>
-              </fieldset>
-          </form>
-      </div>
-    </div>
-    <div class="row-fluid status-bar">
-        <div>
-            <div class="alert alert-success" style="display: none">
-                <b>Success!</b> Wine saved successfully
+  <div class="row-fluid">
+    <div class="alpha60 create">
+      <form class="form-horizontal">
+          <fieldset>
+            <legend>Create a Room</legend>
+            <div class="form-group">
+              <label for="name" class="control-label col-lg-2">Name:</label>
+              <div class="col-lg-10">
+                <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
+              </div>
             </div>
-        </div>
+            <div class="form-group">
+              <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
+              <div class="col-lg-10">
+                <input type="checkbox" id="isPrivate" name="isPrivate" />
+              </div>
+            </div>
+            <div class="form-actions col-lg-offset-2 col-lg-10">
+              <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
+              <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+            </div>
+          </fieldset>
+      </form>
+    </div>
+  </div>
+  <div class="row-fluid status-bar">
+    <div>
+      <div class="alert alert-success" style="display: none">
+        <b>Success!</b> Wine saved successfully
+      </div>
     </div>
   </div>
 </template>
 
 <template name="BrowseRooms">
-  <div class="page">
   {{#if loading}}
     <div id="rooms">Loading...</div>
   {{else}}
-    <div class="page alpha60">
-      <ul class="thumbnailsLeft">
+    <div class="page">
+      <div class="Absolute-Center col-lg-12">
         {{#each rooms}}
-          <a href="/rooms/{{_id}}/mode" class="thumbnail btn-room btn-lg" style="text-align: center;">
-            <h5>{{name}}</h5>
+          <a href="/rooms/{{_id}}/mode" class="thumbnail btn-room btn-lg col-lg-3 green-bg" style="text-align: center;">
+            {{name}}
           </a>
         {{/each}}
-      </ul>
+      </div>
     </div>
   {{/if}}
-  </div>
 </template>
 
 <template name="FindRoom">
-  <div class="page">
-    <div class="row-fluid">
-      <div class="alpha60 create">
-          <form class="form-horizontal">
-              <fieldset>
-                  <legend>Find a Private Room</legend>
-                  <div id="error">No Room with that ID</div>
-                  <div class="form-group">
-                      <label for="privateId" class="control-label col-lg-2">Room Id:</label>
-                      <div class="col-lg-10">
-                          <input type="text" id="privateId" class="form-control" name="privateId" placeholder="eg(Kickback Supreme)"/>
-                      </div>
-                  </div>
-                  <div class="form-actions col-lg-offset-2 col-lg-10">
-                      <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
-                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                  </div>
-              </fieldset>
-          </form>
-      </div>
+  <div class="row-fluid">
+    <div class="alpha60 create">
+        <form class="form-horizontal">
+          <fieldset>
+            <legend>Find a Private Room</legend>
+            <div id="error">No Room with that ID</div>
+            <div class="form-group">
+              <label for="privateId" class="control-label col-lg-2">Room Id:</label>
+              <div class="col-lg-10">
+                <input type="text" id="privateId" class="form-control" name="privateId" placeholder="eg(Kickback Supreme)"/>
+              </div>
+            </div>
+            <div class="form-actions col-lg-offset-2 col-lg-10">
+              <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
+              <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+            </div>
+          </fieldset>
+        </form>
     </div>
   </div>
 </template>
 
 <template name="AddVideoScreen">
-  <div class="page">
-    <div class="row-fluid">
-      <div class="alpha60 create">
-          <form class="form-horizontal">
-              <fieldset>
-                  <legend>Add a Video</legend>
-                  <div class="form-group">
-                      <label for="url" class="control-label col-lg-2">URL:</label>
-                      <div class="col-lg-10">
-                          <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
-                      </div>
-                  </div>
-                  <div class="form-actions col-lg-offset-2 col-lg-10">
-                      <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
-                      <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
-                  </div>
-              </fieldset>
-          </form>
-          <div class="success">
-          </div>
-      </div>
+  <div class="row-fluid">
+    <div class="alpha60 create">
+        <form class="form-horizontal">
+            <fieldset>
+                <legend>Add a Video</legend>
+                <div class="col-lg-2">
+                  <label class="control-label medaiLabel">Media Type:</label>
+                </div>
+                <div class="col-lg-10 mediaInput">
+                  <select class="form-control">
+                    <option>Soundcloud</option>
+                    <option>Vimeo</option>
+                    <option>YouTube</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                    <label for="url" class="control-label col-lg-2">URL:</label>
+                    <div class="col-lg-10">
+                        <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
+                    </div>
+                </div>
+                <div class="form-actions col-lg-offset-2 col-lg-10">
+                    <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
+                    <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
+                </div>
+            </fieldset>
+        </form>
+        <div class="success">
+        </div>
     </div>
   </div>
 </template>
@@ -165,6 +180,7 @@
             {{#if video_objs}}
               <div class="video-container col-lg-10" id="video-container">
                 <div id='youtube-video'></div>
+                <div class="error" style="font-size:30px;color:white;display:none;">No Videos :( Try adding one!</div>
               </div>
             {{else}}
             <div style="font-size:30px;color:white;">No Videos :( Try adding one!</div>
@@ -172,13 +188,16 @@
           {{/constant}}
           {{#isolate}}
               <div class="playlist-container col-lg-2">
+                
                 <div class="row">
                   <legend class="col-8 col-lg-9 down">{{room.name}}</legend>
                   <div class="col-lg-2 col-3"><a id="toAddVideo"><h5 class="plus">+</h5></a></div>
                   <h5 class="roomid">Room ID: {{room._id}}</h5>
                 </div>
+                {{#if adding}}
                 <div class="playlist">
                 </div>
+                {{else}}
                 <div class="addVideoPanel">
                   <form class="form-horizontal">
                     <fieldset>
@@ -196,6 +215,7 @@
                     </fieldset>
                   </form>
                 </div>
+                {{/if}}
                 {{#each videoData}}
                 {{/each}}
               </div>
@@ -206,20 +226,19 @@
 </template>
 
 <template name="ChooseModeScreen">
-  <div class="page">
-    <div class="row-fluid">
-      <div class="alpha60 create">
-        <legend>Choose Mode</legend>
-        <a href="/rooms/{{room._id}}" class="theater mode thumbnail btn-room btn-lg" style="text-align: center;margin:25px 30%;">Theater</a>
-        <a href="/rooms/{{room._id}}/addVideo" class="submitter mode thumbnail btn-room btn-lg" style="text-align: center;margin:25px 30%;">Submitter View</a>
-      </div>
+  <div class="row-fluid">
+    <div class="alpha60 create text-center">
+      <legend>Choose Mode</legend>
+      <a href="/rooms/{{room._id}}" class="theater mode thumbnail btn-room btn-lg blue-bg" style="text-align: center;margin:25px 30%;">Theater</a>
+      <a href="/rooms/{{room._id}}/addVideo" class="submitter mode thumbnail btn-room btn-lg purp-bg" style="text-align: center;margin:25px 30%;">Submitter View</a>
     </div>
   </div>
 </template>
 
 <template name="about">
-  <div class="page">
-  </div>
+</template>
+
+<template name="Contact">
 </template>
 
 <template name="loadingPage">
