--- a/vidj.html
+++ b/vidj.html
@@ -32,17 +32,17 @@
 </body>
 
 <template name="Home">
-  <div class="homepage col-lg-12 text-center">
+  <div class="homepage col-sm-12 text-center">
     <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
     <br/>
     <h3 class="tag">A place to make real-time playlists, with friends.</h3>
     <div class="buttonsHome">
-      <a class="btn btn-lg btn-home purp-bg" href="/rooms">Browse</a>
-      <a class="btn btn-lg btn-home blue-bg" href="/rooms/find">Enter Private Room</a>
-      <a class="btn btn-lg btn-home green-bg" href="/rooms/new/add">Create</a>
+      <a class="btn btn-sm btn-home purp-bg" href="/rooms">Browse</a>
+      <a class="btn btn-sm btn-home blue-bg" href="/rooms/find">Enter Private Room</a>
+      <a class="btn btn-sm btn-home green-bg" href="/rooms/new/add">Create</a>
     </div>
   </div>
-  <div class="about col-lg-12">
+  <div class="about col-sm-12">
     <div class="aboutContent">
     <h2>KikBak.tv </h2>
     <div class="row">
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <div class="wrapper secondary footer col-lg-12 text-center">
+  <div class="wrapper secondary footer col-sm-12 text-center">
     <span>Copyright © 2013 Kikbak.tv</span><span>     |     </span><span><a href="/about" class="plain">About</a></span><span>  |  </span><span><a href="/contact" class="plain">Contact</a></span>
   </div>
 </template>
@@ -69,18 +69,18 @@
           <fieldset>
             <legend>Create a Room</legend>
             <div class="form-group">
-              <label for="name" class="control-label col-lg-2">Name:</label>
-              <div class="col-lg-10">
+              <label for="name" class="control-label col-sm-2">Name:</label>
+              <div class="col-sm-10">
                 <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
               </div>
             </div>
             <div class="form-group">
-              <label for="isPrivate" class="control-label col-lg-2">Private Room?:</label>
-              <div class="col-lg-10">
+              <label for="isPrivate" class="control-label col-sm-2">Private Room?:</label>
+              <div class="col-sm-10">
                 <input type="checkbox" id="isPrivate" name="isPrivate" />
               </div>
             </div>
-            <div class="form-actions col-lg-offset-2 col-lg-10">
+            <div class="form-actions col-sm-offset-2 col-sm-10">
               <input type="submit" value="Save" onclick="return false;" class="btn btn-primary save" />
               <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
             </div>
@@ -101,14 +101,12 @@
   {{#if loading}}
     <div id="rooms">Loading...</div>
   {{else}}
-    <div class="page">
-      <div class="Absolute-Center col-lg-12">
-        {{#each rooms}}
-          <a href="/rooms/{{_id}}/mode" class="thumbnail btn-room btn-lg col-lg-3 green-bg" style="text-align: center;">
-            {{name}}
-          </a>
-        {{/each}}
-      </div>
+    <div class="page row text-center rooms">
+      {{#each rooms}}
+        <a href="/rooms/{{_id}}/mode" class="btn-room col-sm-3 col-xs-12" style="text-align: center;">
+          {{name}}
+        </a>
+      {{/each}}
     </div>
   {{/if}}
 </template>
@@ -121,12 +119,12 @@
             <legend>Find a Private Room</legend>
             <div id="error">No Room with that ID</div>
             <div class="form-group">
-              <label for="privateId" class="control-label col-lg-2">Room Id:</label>
-              <div class="col-lg-10">
+              <label for="privateId" class="control-label col-sm-2">Room Id:</label>
+              <div class="col-sm-10">
                 <input type="text" id="privateId" class="form-control" name="privateId" placeholder="eg(Kickback Supreme)"/>
               </div>
             </div>
-            <div class="form-actions col-lg-offset-2 col-lg-10">
+            <div class="form-actions col-sm-offset-2 col-sm-10">
               <input type="submit" value="Go!" onclick="return false;" class="btn btn-primary goToRoom" />
               <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
             </div>
@@ -139,39 +137,63 @@
 <template name="AddVideoScreen">
   <div class="row-fluid">
     <div class="alpha60 create">
-        <form class="form-horizontal">
-            <fieldset>
-                <legend>Add a Video</legend>
-                <!-- <div class="col-lg-2">
+      <form class="form-horizontal row">
+        <div class="text-center col-sm-5 text-center">
+          <h2>Current Playlist:</h2>
+          <div id="playlist">
+            {{#if videoData}}
+              {{videoData}}
+            {{else}}
+              <p>No videos, try adding one!</p>
+            {{/if}} 
+          </div>
+        </div>
+
+        <fieldset class="addModule col-sm-6">
+            <legend>Add a Video</legend>
+            <div class="chooseSubmitMode text-center">
+              <a class="plain searchMedia btn btn-md blue-bg">Search</a>
+              <a class="plain grabLinks btn btn-md blue-bg">Link Grabber</a>
+            </div>
+            {{#isolate}}
+              {{#if linkGrabber}}
+                <!-- <div class="col-sm-2">
                   <label class="control-label medaiLabel">Media Type:</label>
                 </div>
-                <div class="col-lg-10 mediaInput">
+                <div class="col-sm-10 mediaInput">
                   <select class="form-control">
                     <option>Soundcloud</option>
                     <option>Vimeo</option>
                     <option>YouTube</option>
                   </select>
                 </div> -->
-                <div class="form-group">
-                    <label for="url" class="control-label col-lg-2">URL:</label>
-                    <div class="col-lg-10">
-                        <input type="text" id="url" class="form-control" name="url" placeholder="eg(http://youtu.be/oEXyTJj6MM0)"/>
+                <div class="form-group row">
+                    <label for="url" class="control-label col-sm-2">URL:</label>
+                    <div class="col-sm-10">
+                        <input type="text" id="url" class="form-control" name="url" placeholder="example(http://youtu.be/oEXyTJj6MM0)..."/>
                     </div>
                 </div>
-                <div class="form-actions col-lg-offset-2 col-lg-10">
+                <div class="form-actions col-sm-offset-2 col-sm-10">
                     <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary addVideo" />
-                    <a href="javascript:history.back(-1);" class="btn delete">Cancel</a>
                 </div>
-            </fieldset>
-        </form>
-        {{#if videoData}}
-        <div class="text-center">
-          <h2>Current Playlist:</h2>
-          <div class="playlist text-center">
-            {{videoData}}
-          </div>    
+                <div class="success"></div>
+              {{else}}
+                <form class="form-horizontal">
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="searchTerms">
+                    <span class="input-group-btn">
+                      <input type="submit" value="Search!" onclick="return false;" class="btn btn-default searchYoutube" />
+                    </span>
+                  </div>
+                  <div id="results"></div>
+                </form>
+              {{/if}}
+              {{/isolate}}
+        </fieldset>
+        <div class="text-center toRoom">
+          <a href="/rooms/{{room._id}}">To Room -></a>
         </div>
-        {{/if}}
+      </form>
     </div>
   </div>
 </template>
@@ -181,10 +203,10 @@
     {{#if loading}}
       <div id="entered" style="font-size:30px;color:white">Loading...</div>
     {{else}}
-      <div class="alpha60 currRoom">
+      <div class="alpha60 currRoom row">
           {{#constant}}
             {{#if video_objs}}
-              <div class="video-container col-lg-10" id="video-container">
+              <div class="video-container col-xs-12 col-sm-10" id="video-container">
                 <div id='youtube-video'></div>
                 <div class="error" style="font-size:30px;color:white;display:none;">No Videos :( Try adding one!</div>
               </div>
@@ -193,31 +215,28 @@
             {{/if}}
           {{/constant}}
           {{#isolate}}
-              <div class="playlist-container col-lg-2">
-                
+              <div class="playlist-container col-xs-12 col-sm-2">
                 <div class="row">
-                  <legend class="col-8 col-lg-9 down">{{room.name}}</legend>
-                  <div class="col-lg-2 col-3"><a id="toAddVideo"><h5 class="plus">+</h5></a></div>
+                  <legend class="col-sm-8 down">{{room.name}}</legend>
+                  <div class="col-sm-2 "><a id="toFullscreen"><h5 class="plus">F</h5></a></div>
+                  <div class="col-sm-2"><a id="toAddVideo"><h5 class="plus">+</h5></a></div>
                   <h5 class="roomid">Room ID: {{room._id}}</h5>
                 </div>
                 {{#if adding}}
-                <div class="playlist">
+                <div id="playlist">
                 </div>
                 {{else}}
                 <div class="addVideoPanel">
                   <form class="form-horizontal">
                       <h5>Add a Video</h5>
-
-
                       <div class="input-group">
                         <input type="text" class="form-control" id="searchTerms">
                         <span class="input-group-btn">
-                          <button class="btn btn-default searchYoutube addVideo" type="button">Search!</button>
+                          <input type="submit" value="Search!" onclick="return false;" class="btn btn-default searchYoutube" />
                         </span>
                       </div>
                       <div id="results"></div>
-                      <div class="form-actions col-lg-offset-2 col-lg-10">
-                        <input type="submit" value="Add!" onclick="return false;" class="btn btn-primary " />
+                      <div class="form-actions col-sm-offset-2 col-sm-10">
                         <a class="btn delete">Cancel</a>
                       </div>
                   </form>
@@ -234,10 +253,10 @@
 
 <template name="ChooseModeScreen">
   <div class="row-fluid">
-    <div class="alpha60 create text-center">
+    <div class="alpha60 text-center">
       <legend>Choose Mode</legend>
-      <a href="/rooms/{{room._id}}" class="theater mode thumbnail btn-room btn-lg blue-bg" style="text-align: center;margin:25px 30%;">Theater</a>
-      <a href="/rooms/{{room._id}}/addVideo" class="submitter mode thumbnail btn-room btn-lg purp-bg" style="text-align: center;margin:25px 30%;">Submitter View</a>
+      <a href="/rooms/{{room._id}}" class="theater mode thumbnail btn-room btn-sm blue-bg" style="text-align: center;margin:25px 30%;">Theater</a>
+      <a href="/rooms/{{room._id}}/addVideo" class="submitter mode thumbnail btn-room btn-sm purp-bg" style="text-align: center;margin:25px 30%;">Submitter View</a>
     </div>
   </div>
 </template>
