--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,13 @@
 <head>
   <title>Kikbak.tv</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="initial-scale=1">
+  <script type="text/javascript">
+    if (window.screen.height==568) { // iPhone 4"
+      document.querySelector("meta[name=viewport]").content="width=320.1";
+    }
+  </script>
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
   <link href=' http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
