iphone tweaks, style fixes

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
   <link href=' http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <!-- iPhone -->
+ <!-- iPhone (Retina) -->
+  <link href="/img/splash-640x960.png" rel="apple-touch-startup-image">
+
+  <!-- iPhone 5 -->
+
 </head>
 
 <body>
